# Windows-Programming

./: SOAPnuke-profile.txt  cuda_pairhmm.cu  cuda_pairhmm.h  part.sam
SOAP/: CMakeCache.txt  CMakeLists.txt  Common.h  FilterProcessor.cpp  FilterProcessor.h  Makefile  MetaProcessor.cpp  PeBuffer.cpp  PeBuffer.h  SOAPnuke.cbp  SRNACleanFA.cpp  SRNAProcessor.cpp  cmake_install.cmake
bgi/: CMakeLists.txt  document.odp
bgi/fastq_gz_handler/: CMakeLists.txt  FastqHandler.cpp  FastqHandler.h  main.cpp
bwa/: GetUmhg19Qc.cpp  GetUmhg19Qc.h  GetUmhg19QcProcess.cpp  GetUmhg19QcProcess.h  GetUmplasmid.cpp  GetUmplasmid.h  GetUmplasmidprocess.cpp  GetUmplasmidprocess.h  bwa.c  c_filter_fq.cpp  c_filter_fq.hpp  fastmap.c  obejectWrapper.cpp  obejectWrapper.h  remote_debug
bwa/bak/: Makefile  fastmap.c  main.c
c++_advanced/: 33_name_hiding.cpp  34_Inheritance_of_interface_and_implementation.cpp  CMakeLists.txt  LoadLib  LoadLib.cpp  name_hiding
c++_advanced/Method/: mergeSortedArray.cpp  searchMatrix.cpp  superEggDrop.cpp
fastq_gz_handler/: FastqHandler.cpp  FastqHandler.h  main.cpp
intern/: StructCopy  StructCopy.c  circulation.cpp  example.c  example.i  example.s  inheritence_constructor.cpp  initial  initialization_assignment.cpp  pointer_offset  pointer_offset.cpp  quickSort.cpp  typecast  typecast.cpp
intern/SEGV/: CMakeLists.txt  main.cpp
intern/SEGV/log/: 3b96cd7c-7102-47ce-df980e82-106a2d8e.dmp  7e3d25fd-8771-497e-e8c9d3a2-d32f8689.dmp  8ed7bc32-9874-47ea-6121548f-c7109747.dmp
intern/pattern/: decorator
samhandler/: CMakeLists.txt  main.cpp
samhandler/core/: CMakeLists.txt  Filter.cpp  Filter.h  Repository.cpp  Repository.h  SamReader.cpp  SamReader.h  SamWriter.cpp  SamWriter.h  Sort.cpp  Sort.h  samtool_core.h
